--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "SeanKilgarriff.com",
+  "name": "Decarium.com",
   "version": "0.1.0",
   "private": true,
-  "description": "Sean Kilgarriff's personal website",
+  "description": "Deacarium's website",
   "scripts": {
     "start": "webpack-dashboard -- webpack-dev-server --config webpack.config.dev.js",
     "clean:dist": "rm -rf dist",
     "build": "BABEL_ENV=production NODE_ENV=production webpack",
+    "deploy": "yarn clean:dist && yarn build && deploy/deploy.sh",
     "lint:js": "eslint src",
     "lint:css": "stylelint \"src/**/*.css\"",
     "lint": "npm run lint:js && npm run lint:css",
